--- a/src/personajes-filtro/index.html
+++ b/src/personajes-filtro/index.html
@@ -11,13 +11,10 @@
     <div id="app">
       <h1 id="titulo">Personajes de Mortadelo y Filemón</h1>
       <div class="busqueda" id="buscador">
-        <label for="barra-busqueda"></label>
-        <input type="text" required id="barra-busqueda" />
-
-        <button id="boton-filtro">Filtrar</button>
+        <button id="nueva-busqueda">Nueva búsqueda</button>
       </div>
       <div class="tablero-personajes" id="tablero"></div>
     </div>
-    <script type="module" src="personajes-listado.ts"></script>
+    <script type="module" src="personajes-filtro.ts"></script>
   </body>
 </html>
