--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,11 @@
   <body>
     <div id="app">
       <h1>Personajes de Mortadelo y Filemón</h1>
+      <img
+        id="portada"
+        src="https://thumbs.dreamstime.com/z/some-classic-copies-spanish-comics-flat-lay-old-tbo-such-as-mortadelo-y-filem%C3%B3n-roberto-alc%C3%A1zar-pedr%C3%ADn-zipi-zape-jaimito-222114694.jpg?w=992"
+        alt="mortadelo y filemón portada"
+      />
       <div>
         <button id="boton-comenzar">
           <a href="./personajes-listado/index.html">Comenzar</a>
