--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="reseteo.css" />
     <link rel="stylesheet" href="estilos.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Práctica módulo 10</title>
+    <title>Comienzo app</title>
   </head>
   <body>
     <div id="app">
