--- a/src/personajes-filtro/index.html
+++ b/src/personajes-filtro/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../reseteo.css" />
     <link rel="stylesheet" href="../estilos.css" />
-    <title>Listado de personajes</title>
+    <title>Personaje filtrado</title>
   </head>
   <body>
     <div id="app">
