--- a/src/personajes-filtro/index.html
+++ b/src/personajes-filtro/index.html
@@ -11,7 +11,7 @@
     <div id="app">
       <h1 id="titulo">Personajes de Mortadelo y Filemón</h1>
       <div class="busqueda" id="buscador">
-        <button id="nueva-busqueda">Nueva búsqueda</button>
+        <form id="nueva-busqueda">Nueva búsqueda</form>
       </div>
       <div class="tablero-personajes" id="tablero"></div>
     </div>
