--- a/src/personajes-listado/index.html
+++ b/src/personajes-listado/index.html
@@ -13,8 +13,7 @@
       <div class="busqueda" id="buscador">
         <label for="barra-busqueda"></label>
         <input type="text" required id="barra-busqueda" />
-
-        <button id="boton-filtro">Filtrar</button>
+        <form id="boton-filtro">Filtrar</form>
       </div>
       <div class="tablero-personajes" id="tablero"></div>
     </div>
