--- a/src/personajes-filtro/index.html
+++ b/src/personajes-filtro/index.html
@@ -11,7 +11,9 @@
     <div id="app">
       <h1 id="titulo">Personajes de Mortadelo y Filemón</h1>
       <div class="busqueda" id="buscador">
-        <form id="nueva-busqueda">Nueva búsqueda</form>
+        <label for="barra-busqueda"></label>
+        <input type="text" required id="barra-busqueda" />
+        <form id="boton-filtro">Filtrar</form>
       </div>
       <div class="tablero-personajes" id="tablero"></div>
     </div>
