--- a/src/index.html
+++ b/src/index.html
@@ -2,25 +2,21 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <link rel="stylesheet" href="reseteo.css" />
-    <link rel="stylesheet" href="estilos.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Comienzo app</title>
+    <link rel="stylesheet" href="../reseteo.css" />
+    <link rel="stylesheet" href="../estilos.css" />
+    <title>Personajes de Mortadelo y Filemón</title>
   </head>
   <body>
     <div id="app">
-      <h1>Personajes de Mortadelo y Filemón</h1>
-      <img
-        id="portada"
-        src="https://thumbs.dreamstime.com/z/some-classic-copies-spanish-comics-flat-lay-old-tbo-such-as-mortadelo-y-filem%C3%B3n-roberto-alc%C3%A1zar-pedr%C3%ADn-zipi-zape-jaimito-222114694.jpg?w=992"
-        alt="mortadelo y filemón portada"
-      />
-      <div>
-        <button id="boton-comenzar">
-          <a href="./personajes-listado/index.html">Comenzar</a>
-        </button>
+      <h1 id="titulo">Personajes de Mortadelo y Filemón</h1>
+      <div class="busqueda" id="buscador">
+        <label for="barra-busqueda"></label>
+        <input type="text" required id="barra-busqueda" />
+        <form id="boton-filtro">Filtrar</form>
       </div>
+      <div class="tablero-personajes" id="tablero"></div>
     </div>
+    <script type="module" src="ui.ts"></script>
   </body>
 </html>
